# pydantic_users

./: README.md  models.py  pyproject.toml  pytest.ini
tests/: conftest.py  test_models.py
